# octobot

./: .dockerignore  .gitattributes  .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  Dockerfile  Dockerfile.build  LICENSE.txt  README.md  build.py  deploy-here.sh  deploy.sh  docker-entrypoint.sh  git-ask-pass.js  hello.txt  index.js  package.json  test.js  test.sh
.github/workflows/: rust.yml
ldap/: Cargo.toml
ldap/src/: auth.rs  ldap-check.rs  lib.rs
lib/: Cargo.toml  git-octocat.js  handlers.js  messages.js  peace-and-quiet.js  repos.js  users.js  util.js
lib/src/: config.rs  config_db.rs  config_db_migrations.rs  http_client.rs  jwt.rs  lib.rs  metrics.rs  passwd.rs  repos.rs  slack.rs  users.rs  version.rs
lib/src/db/: db.rs  migrations.rs  migrations_code.rs  mod.rs
lib/src/github/: api.rs  models.rs  models_checks.rs
lib/src/jira/: api.rs  check_jira_refs.rs  mod.rs  models.rs  workflow.rs
octobot/: Cargo.toml
octobot/src/: http_util.rs  lib.rs  main.rs  runtime.rs
octobot/src/assets/: app.js  index.html  repos.html  users.html  versions.html
octobot/src/server/: admin.rs  github_handler.rs  github_verify.rs  html_handler.rs  http.rs  login.rs  main.rs  metrics.rs  mod.rs  octobot_service.rs  redirect_service.rs  sessions.rs
octobot/tests/: check_jira_refs_test.rs  force_push_test.rs  git_test.rs  github_handler_test.rs  jira_workflow_test.rs  messenger_test.rs  pr_merge_test.rs
octobot/tests/git_helper/: mod.rs  temp_git.rs
octobot/tests/mocks/: mock_github.rs  mock_jira.rs  mock_slack.rs  mock_worker.rs  mod.rs
ops/: Cargo.toml
ops/src/: diffs.rs  dir_pool.rs  docker.rs  force_push.rs  git.rs  git_clone_manager.rs  lib.rs  messenger.rs  metrics.rs  pr_merge.rs  repo_version.rs  slack.rs  slack_db.rs  slack_db_migrations.rs  users_migrate.rs  util.rs  webhook_db.rs  webhook_db_migrations.rs  worker.rs
spec/: handlers-spec.js  messages-spec.js  repos-spec.js  users-spec.js  util-spec.js
src/: ask-pass.rs  config.rs  db.rs  db.sql  db_migrations.rs  diffs.rs  dir_pool.rs  docker.rs  force_push.rs  git.rs  git_clone_manager.rs  github.rs  http_client.rs  jwt.rs  ldap-check.rs  ldap_auth.rs  lib.rs  main.rs  messenger.rs  migrate-db.rs  octobot-passwd.rs  pr_merge.rs  repo_version.rs  repos.rs  runtime.rs  slack.rs  users.rs  util.rs  version.rs  worker.rs
src/assets/: app.js  index.html  index.js  login.html  repos.html  users.html  versions.html
src/db/: db.rs  migrations.rs  migrations_code.rs
src/github/: api.rs  mod.rs  models.rs  models_checks.rs
src/jira/: api.rs  check_jira_refs.rs  mod.rs  models.rs  workflow.rs
src/server/: admin.rs  github_handler.rs  github_verify.rs  html_handler.rs  http.rs  login.rs  main.rs  mod.rs  octobot_service.rs  redirect_service.rs  sessions.rs
tests/: check_jira_refs_test.rs  force_push_test.rs  git_test.rs  github_handler_test.rs  jira_workflow_test.rs  messenger_test.rs  pr_merge_test.rs
tests/git_helper/: temp_git.rs
tests/mocks/: mock_github.rs  mock_jira.rs  mock_slack.rs  mock_worker.rs  mod.rs
utils/: Cargo.toml  README.md
utils/src/: ask-pass.rs  jira-test.rs  octobot-passwd.rs
