[package]
authors = ["Matt Hauck <matt.hauck@tanium.com>"]
name = "octobot"
version = "0.1.0"

[[bin]]
doc = false
name = "octobot"
path = "src/main.rs"

[[bin]]
doc = false
name = "octobot-ask-pass"
path = "src/ask-pass.rs"

[[bin]]
doc = false
name = "octobot-passwd"
path = "src/octobot-passwd.rs"

[[bin]]
doc = false
name = "ldap-check"
path = "src/ldap-check.rs"

[[bin]]
doc = false
name = "migrate-db"
path = "src/migrate-db.rs"

[dependencies]
base64 = "0.9.3"
env_logger = "0.5.13"
error-chain = "0.12.0"
futures = "0.1.24"
http = "0.1.13"
hyper = "0.12.10"
hyper-rustls = "0.14.0"
log = "0.4.5"
maplit = "1.0.1"
openldap = "1.2.1"
regex = "1.0.5"
ring = "0.13.2"
rpassword = "2.0.0"
rusqlite = "0.14.0"
rust-crypto = "0.2.36"
rustc-serialize = "0.3.24"
rustls = "0.13.1"
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.30"
thread-id = "3.3.0"
time = "0.1.40"
tokio = "0.1.8"
tokio-core = "0.1.17"
tokio-rustls = "0.7.2"
toml = "0.4.7"
unidiff = "0.2.1"
url = "1.7.1"
tokio-threadpool = "0.1.6"

[dependencies.jsonwebtoken]
git = "https://github.com/matthauck/jsonwebtoken"
rev = "94917bfe2ccf33853a1d57094138f9e9d42c5a86"

[dependencies.reqwest]
git = "https://github.com/seanmonstar/reqwest"
rev = "3877e8729c416cbfd4bda95b60a1e83587cf4b4e"
version = "0.9.5"
features = ["rustls-tls"]
default-features = false

[dev-dependencies]
tempdir = "0.3.7"

[lib]
doc = false
name = "octobot"
path = "src/lib.rs"
