[package]
authors = ["Matt Hauck <matt.hauck@tanium.com>"]
name = "octobot_ldap"
version = "0.1.0"
edition = "2018"

[[bin]]
doc = false
name = "ldap-check"
path = "src/ldap-check.rs"

[dependencies]
octobot_lib = { path = "../lib" }
failure = "0.1.8"
log = "0.4.17"
openldap = "1.2.2"
regex = "1.5.6"
rpassword = "6.0.1"
