[package]
authors = ["Matt Hauck <matt.hauck@tanium.com>"]
name = "octobot_ldap"
version = "0.1.0"
edition = "2024"

[[bin]]
doc = false
name = "ldap-check"
path = "src/ldap-check.rs"

[dependencies]
octobot_lib = { path = "../lib" }
log = "0.4.19"
openldap = "1.2.2"
regex = "1.9.3"
rpassword = "7.2.0"
anyhow = { version = "1.0.72", features = ["backtrace"] }
