[package]
authors = ["Matt Hauck <matt.hauck@tanium.com>"]
name = "octobot_lib"
version = "0.1.0"
edition = "2018"

[lib]
doc = false
name = "octobot_lib"
path = "src/lib.rs"

[dependencies]
base64 = "0.13.0"
conventional = "0.5.0"
failure = "0.1.8"
log = "0.4.17"
regex = "1.5.6"
ring = "0.16.20"
rusqlite = "0.27.0"
rustc-serialize = "0.3.24"
serde = "1.0.137"
serde_derive = "1.0.137"
serde_json = "1.0.81"
toml = "0.5.9"
url = "2.2.2"
jsonwebtoken = "8.1.0"
reqwest = { version = "0.11.10", features = ["json"] }
async-trait = "0.1.56"
percent-encoding = "2.1.0"
chrono = "0.4.19"
prometheus = { version = "0.13.1", features = ["process"] }
maplit = "1.0.2"

[dev-dependencies]
tempdir = "0.3.7"
