[package]
authors = ["Matt Hauck <matt.hauck@tanium.com>"]
name = "octobot_lib"
version = "0.1.0"
edition = "2018"

[lib]
doc = false
name = "octobot_lib"
path = "src/lib.rs"

[dependencies]
base64 = "0.21.2"
conventional = "0.5.0"
failure = "0.1.8"
log = "0.4.18"
regex = "1.8.3"
ring = "0.16.20"
rusqlite = "0.29.0"
rustc-serialize = "0.3.24"
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"
toml = "0.7.4"
url = "2.3.1"
jsonwebtoken = "8.3.0"
reqwest = { version = "0.11.18", features = ["json"] }
async-trait = "0.1.68"
percent-encoding = "2.2.0"
chrono = "0.4.26"
prometheus = { version = "0.13.3", features = ["process"] }
maplit = "1.0.2"

[dev-dependencies]
tempdir = "0.3.7"
