[package]
authors = ["Matt Hauck <matt.hauck@tanium.com>"]
name = "octobot_lib"
version = "0.1.0"
edition = "2024"

[lib]
doc = false
name = "octobot_lib"
path = "src/lib.rs"

[dependencies]
base64 = "0.21.2"
conventional = "0.5.0"
log = "0.4.19"
regex = "1.9.3"
ring = "0.17.13"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = "1.0.183"
serde_derive = "1.0.183"
serde_json = "1.0.104"
toml = "0.7.6"
url = "2.4.0"
jsonwebtoken = "8.3.0"
reqwest = { version = "0.11.18", features = ["json"] }
async-trait = "0.1.72"
percent-encoding = "2.3.0"
prometheus = { version = "0.13.3", features = ["process"] }
maplit = "1.0.2"
hex = "0.4.3"
time = "0.3.25"
anyhow = { version = "1.0.72", features = ["backtrace"] }

[dev-dependencies]
tempfile = "3"
