[package]
authors = ["Matt Hauck <matt.hauck@tanium.com>"]
name = "octobot"
version = "0.1.0"
edition = "2018"

[[bin]]
doc = false
name = "octobot"
path = "src/main.rs"

[lib]
doc = false
name = "octobot"
path = "src/lib.rs"

[dependencies]
octobot_lib = { "path" = "../lib" }
octobot_ldap = { "path" = "../ldap" }
octobot_ops = { "path" = "../ops" }
env_logger = "0.10.0"
http = "0.2.9"
hyper = { version = "0.14.27", features = ["server"] }
log = "0.4.19"
regex = "1.9.3"
ring = "0.16.20"
serde = "1.0.183"
serde_derive = "1.0.183"
serde_json = "1.0.104"
thread-id = "4.1.0"
tokio = { version = "1.29.1", features = ["rt", "rt-multi-thread", "macros"] }
async-trait = "0.1.72"
prometheus = "0.13.3"
maplit = "1.0.2"
time = { version = "0.3.25", features = ["local-offset"]}
hex = "0.4.3"
anyhow = "1.0.72"

[dev-dependencies]
tempfile = "3"
