[package]
authors = ["Matt Hauck <matt.hauck@tanium.com>"]
name = "octobot_ops"
version = "0.1.0"
edition = "2018"

[lib]
doc = false
name = "octobot_ops"
path = "src/lib.rs"

[dependencies]
octobot_lib = { "path" = "../lib" }
conventional = "0.5.0"
failure = "0.1.8"
hyper = "0.14.26"
log = "0.4.18"
regex = "1.8.3"
serde = "1.0.163"
serde_derive = "1.0.163"
tokio = { version = "1.28.2", features = ["rt"] }
unidiff = "0.3.3"
reqwest = { version = "0.11.18", features = ["json"] }
async-trait = "0.1.68"
serde_json = "1.0.96"

[dev-dependencies]
tempdir = "0.3.7"
maplit = "1.0.2"
