[package]
authors = ["Matt Hauck <matt.hauck@tanium.com>"]
name = "octobot_ops"
version = "0.1.0"
edition = "2018"

[lib]
doc = false
name = "octobot_ops"
path = "src/lib.rs"

[dependencies]
octobot_lib = { "path" = "../lib" }
conventional = "0.5.0"
hyper = "0.14.27"
log = "0.4.19"
regex = "1.9.3"
serde = "1.0.183"
serde_derive = "1.0.183"
tokio = { version = "1.43.1", features = ["rt"] }
unidiff = "0.3.3"
reqwest = { version = "0.11.18", features = ["json"] }
async-trait = "0.1.72"
serde_json = "1.0.104"
rusqlite = { version = "0.31.0", features = ["bundled"] }
anyhow = { version = "1.0.72", features = ["backtrace"] }

[dev-dependencies]
maplit = "1.0.2"
tempfile = "3"
