[package]
authors = ["Matt Hauck <matt.hauck@tanium.com>"]
name = "octobot_utils"
version = "0.1.0"
edition = "2024"

[[bin]]
doc = false
name = "octobot-ask-pass"
path = "src/ask-pass.rs"

[[bin]]
doc = false
name = "octobot-passwd"
path = "src/octobot-passwd.rs"

[dependencies]
rpassword = "7.2.0"
ring = "0.17.13"
regex = "1.9.3"
octobot_lib = { "path" = "../lib" }
hex = "0.4.3"
